--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ __pycache__/
 # my ignore
 bert_weights_chinese
 data/cmrc2019_*.json_*
-fixed_baseline/fixed_baseline_output
+*_output
 *.log
+.idea/
